[OPENMEETINGS-2077] external type is moved to the group (tests are broken)